2003-12-23  Shiro Kawai  <shiro@acm.org>

	* examples/lambdabooks.kahua
	(standard-page-cont, standard-frame-cont):
	fixed a couple of leftovers of type inconsistencies.

2003-12-23  Nobuo Yamashita <nobsun@sampou.org>

	* examples/lambdabooks.kahua:
	fixed type inconsistencies.

	* src/kahua/html.scm (interp-html, interp-html-rec):
	old interp-html renamed to interp-html-rec.
	interp-html redefined without cont arg.

	* test/*.kahua:
	modified corresponding change of interp-html.

2003-12-22  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-db-open, kahua-db-close) :
	added lock mechanism using fcntl(2).  NB: this might cause a
	problem on platforms that don't support fcntl(2) record lock.

2003-12-22  Nobuo Yamashita <nobsun@sampou.org>

	* examples/lambdabooks.kahua (standard-frame, standard-page):

	position of 'context' arg rearraged to be at last but 'cont' arg.
	(fixed bug: the previous commit did not changed them).

2003-12-21  Nobuo Yamashita <nobsun@sampou.org>

	* examples/lambdabooks.kahua (standard-frame, standard-page):
	* examples/lambdabooks/book.kahua (show-book-detail):
	* examples/lambdabooks/login.kahua (login-dialog, new-user): 
	local functions
	* examples/lambdabooks/review.kahua (show-reviews, write-review):
	* examples/lambdabooks/useradmin.kahua (user-edit-panel)
	local function
	
	position of 'context' arg rearraged to be at last but 'cont' arg.

	* examples/lambdabooks/lister.kahua (lister)

	modified args order and curried.

2003-12-21  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/xml.scm (match-pattern): added !contain
	directive.

	* test/test-xml.scm : added tests fo the above change.

2003-12-19  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/xml.scm
	(match-pattern) : treat attribute node (@ ...) specially; in it,
	patterns match any permutations of the input.
	(test-sxml-select-matcher, test-xml-select-matcher) : added
	higher-order test function parameterized by sxpath selection rule.
