@@ -1,6 +1,6 @@
 #!/usr/bin/env gosh
 ;; Communicate to kahua application server
-;; $Id: kahua.cgi.in,v 1.2 2003/12/16 03:49:53 shiro Exp $
+;; $Id: kahua.cgi.in,v 1.3 2003/12/25 15:13:03 ko1 Exp $
 
 ;; This cgi script is kicked by httpd and pass through the request
 ;; to one of kahua servers.
@@ -26,10 +26,15 @@
 (use rfc.cookie)
 (use text.html-lite)
 (use kahua.gsid)
+(use kahua.config)
+(use file.util)
 
 ;; Change this if you're using non-default sockbase
 (define *sockbase* #f)
 ;(define *sockbase* "unix:/home/shiro")
+
+;; bridge name option, mainly to pass "~user" information
+(define *bridge-option* "")
 
 (log-open "/tmp/t.log")
 
@@ -45,8 +50,25 @@
                    :path ,(sys-dirname (or (sys-getenv "SCRIPT_NAME") "/"))))))
      body)))
 
+;;
+;;
+;;
+(define (load-user-config user-dir)
+        (let1 conf (string-append (expand-path user-dir)
+                                  ".kahua/kahua.conf")
+          (if (file-is-readable? conf)
+              (begin
+               (kahua-init conf)
+               (set! *bridge-option* (string-append "/" user-dir))
+               (set! *sockbase* (ref (kahua-config) 'sockbase)))
+            (error "no user kahua.conf"))))
+
+
 ;; determine dispatch destination.
 ;; returns worker-id, preferable-worker-type, and cgsid.
+;;
+;; return: (worker-id worker-type cont-gsid)
+;; 
 (define (dispatch-destination params)
   (let* ((path-info (and-let* ((p (sys-getenv "PATH_INFO"))
                                (l (string-split p #\/)))
@@ -54,11 +76,16 @@
                            (not (equal? (cadr l) ""))
                            (cdr l))))
          (cont-gsid (cgi-get-parameter "x-kahua-cgsid" params)))
+    (if (and (pair? path-info)
+             (#/\~.+/ (car path-info)))
+        (begin
+         (load-user-config (car path-info))
+         (set! path-info (cdr path-info))))
     (cond
-     (path-info
+     ((pair? path-info)
       (let ((type  (car path-info))
             (cgsid (if (pair? (cdr path-info)) (cadr path-info) #f)))
-        (values #f type cgsid)))
+          (values #f type cgsid)))
      (cont-gsid
       (values (gsid->worker-id cont-gsid) #f cont-gsid))
      (else
@@ -71,7 +98,8 @@
     (let* ((state-gsid (cgi-get-parameter "x-kahua-sgsid" param))
            (remote-addr (sys-getenv "REMOTE_ADDR"))
            (header     (list*
-                        `("x-kahua-bridge" ,(sys-getenv "SCRIPT_NAME"))
+                        `("x-kahua-bridge" ,(string-append (sys-getenv "SCRIPT_NAME")
+                                                           *bridge-option*))
                         (cond-list
                          (worker-type `("x-kahua-worker" ,worker-type))
                          (state-gsid `("x-kahua-sgsid" ,state-gsid))
@@ -91,8 +119,21 @@
       )))
                       
 (define (main args)
-  (cgi-main send-reply :merge-cookies #t)
+  (cgi-main send-reply
+            :merge-cookies #t
+            :on-error cgi-error-proc
+            )
   0)
+
+(define (cgi-error-proc e)
+  `(,(cgi-header)
+    ,(html-doctype)
+    ,(html:html
+      (html:head (html:title "Error"))
+      (html:body (html:h1 "Error")
+                 (html:p (html-escape-string (slot-ref e 'message)))
+                 ))))
+
 
 ;; local variables:
 ;; mode: scheme
